--- a/build.gradle
+++ b/build.gradle
@@ -48,15 +48,17 @@ apply plugin: 'application'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
+mainClassName='com.example.DemoApplication'
+
 jar {
 	from configurations.runtime
 	manifest {
 		attributes(
 				'Main-Class': 'com.example.DemoApplication',
-				'Class-Path': configurations.compile.collect {it.toURI().toString()}.join(' ')
+				'Class-Path': configurations.runtime.files.collect { it.name }.join(' ')
 		)
 	}
-	baseName 'Flix'
+	archiveName 'Filx.jar'
 }
 
 idea {
