--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,14 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot' 
+apply plugin: 'war'
 
 jar {
 	baseName = 'flix'
 	version = '0'
 }
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
 	mavenCentral()
@@ -38,7 +39,7 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.3'
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	compile group: 'com.google.guava', name: 'guava', version: '19.0'
-
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
