--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.thymeleaf.template-resolver-order=1
 
 spring.mvc.view.prefix=classpath:/templates
 spring.mvc.view.suffix=.html
+
+#fileupload
+multipart.max-file-size=3000Mb
+multipart.max-request-size=3000Mb
