--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,14 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-ws')
 	compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '2.1.2.RELEASE'
-	compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.3'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	compile group: 'com.google.guava', name: 'guava', version: '19.0'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	/*log*/
+	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
+	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.21'
+	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
@@ -59,7 +63,7 @@ jar {
 				'Class-Path': configurations.runtime.files.collect { it.name }.join(' ')
 		)
 	}
-	archiveName 'Filx.jar'
+	archiveName 'Flix.jar'
 }
 
 idea {
