--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #tomcat server setting
-server.port=8070
+server.port=8080
 server.context-path=/
 server.tomcat.uri-encoding=UTF-8
-#server.error.path=/error
+server.error.path=/error
 server.tomcat.max-threads=4
 
 #database setting
