--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
 	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.21'
 	compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	compile group: 'com.googlecode.log4jdbc', name: 'log4jdbc', version: '1.2'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
