--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.tomcat.max-threads=4
 #database setting
 spring.datasource.username=bangae1
 spring.datasource.password=fpdlwms1
-spring.datasource.url=jdbc:mysql://211.213.66.5:3306/dev?useSSL=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:log4jdbc:mysql://211.213.66.5:3306/dev?useSSL=false
+spring.datasource.driver-class-name=net.sf.log4jdbc.DriverSpy
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
