--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,3 +4,8 @@ video.temp.path=/app/Flix/static/videos/
 video.real.resource.path=attach/
 video.resource.path=/videos/
 
+
+video.real.path.debug=c:/media/sda1/
+video.temp.path.debug=
+
+debug_local=N
