--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.error.path=/error
 server.tomcat.max-threads=4
 
 #database setting
-spring.datasource.username=bangae1
-spring.datasource.password=fpdlwms1
-spring.datasource.url=jdbc:log4jdbc:mysql://211.213.66.5:3306/dev?useSSL=false
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.url=jdbc:
 spring.datasource.driver-class-name=net.sf.log4jdbc.DriverSpy
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
